# fast_screenshot_ai

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/components/: base.py  capture_cursor_selected_portion.py  capture_selected_portion.py
app/threads/: ask_ollama.py  ask_open_ai.py  text_extraction.py
app/utils/: image.py
